tests/syntax-error/return-expr-no-type.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g return-expr-no-type.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: return-expr-no-type.silly: In function ‘foo’:
// CHECK: return-expr-no-type.silly:10:12: error: return expression found '0', but no return type for function foo
// CHECK:    10 |     RETURN 0;
// CHECK:       |            ^

FUNCTION foo(INT32 j)
{
    RETURN 0;
};
